fix logo display on mobile

--- a/docs/content/default.css
+++ b/docs/content/default.css
@@ -45,7 +45,7 @@ footer {
 }
 @media (min-width: 359px) {
     .carousel-item.communityday #communityday-logo {
-        height: 100px;
+        height: 60px;
     }
 }
 @media (min-width: 576px) {
